# advent-of-code-2022

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: ci.yml
extras/: 15.smt2
src/: helpers.rs
