[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Jakub Janaszkiewicz <janaszkiewicz.jakub@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
pico-args = "0.5.0"
regex = "1.7.0"
lazy_static = "1.4.0"
